[gd_scene load_steps=4 format=3 uid="uid://cq368yqvwamy3"]

[ext_resource type="Texture2D" uid="uid://nuxlvj3cftae" path="res://Sprites/Armas/arco e flecha/flecha.png" id="1"]
[ext_resource type="Script" path="res://Scripts/flecha.gd" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syqb4"]
size = Vector2(0.999989, 3)

[node name="flecha" type="Node2D"]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_syqb4")

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
